--- a/ss6_css_cascadin_sheets_style/untitled/src/format_text_with_css.html
+++ b/ss6_css_cascadin_sheets_style/untitled/src/format_text_with_css.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Việt Nam</title>
-    <style>.indent{padding-left: 1.7em; align-content: center;font-family: 'Times New Roman',serif}</style>
+    <style>.indent {
+        padding-left: 1.7em;
+        align-content: center;
+        font-family: 'Times New Roman', serif
+    }</style>
 </head>
 <body>
 <span style="color: black;font-size: 40px;">Việt Nam</span>
@@ -12,31 +16,62 @@
     Bách khoa toàn thư mở Wikipedia
 </span>
 <br> <br>
-<!--<a href="/wiki/Qu%E1%BB%91c_gia" title="Quốc gia"></a>-->
 <span class="indent" style="font-size: 20px;">
     Việt Nam( tên gọi chính thức :
     <b>Cộng hòa Xã hội chủ nghĩa Việt Nam </b> )là một <a href="/wiki/Qu%E1%BB%91c_gia" title="Quốc gia">quốc gia</a> nằm ở cực Đông của
-    <a href="https://vi.wikipedia.org/wiki/B%C3%A1n_%C4%91%E1%BA%A3o_%C4%90%C3%B4ng_D%C6%B0%C6%A1ng" title="bán đảo Đông Dương">bán đảo Đông Dương</a> thuộc khu vực
-    <a href="https://vi.wikipedia.org/wiki/%C4%90%C3%B4ng_Nam_%C3%81" title="Đông Nam Á">Đông Nam Á</a>, giáp với <a href="https://vi.wikipedia.org/wiki/L%C3%A0o" title="Lào">Lào</a> ,
+    <a href="https://vi.wikipedia.org/wiki/B%C3%A1n_%C4%91%E1%BA%A3o_%C4%90%C3%B4ng_D%C6%B0%C6%A1ng"
+       title="bán đảo Đông Dương">bán đảo Đông Dương</a> thuộc khu vực
+    <a href="https://vi.wikipedia.org/wiki/%C4%90%C3%B4ng_Nam_%C3%81" title="Đông Nam Á">Đông Nam Á</a>, giáp với <a
+        href="https://vi.wikipedia.org/wiki/L%C3%A0o" title="Lào">Lào</a> ,
     <a href="https://vi.wikipedia.org/wiki/Campuchia" title="Campuchia">Campuchia</a>,
-    <a href="https://vi.wikipedia.org/wiki/Trung_Qu%E1%BB%91c" title="Trung Quốc">Trung Quốc</a>, <a href="https://vi.wikipedia.org/wiki/L%C3%A0o" title="biển Đông">biển Đông</a> và
+    <a href="https://vi.wikipedia.org/wiki/Trung_Qu%E1%BB%91c" title="Trung Quốc">Trung Quốc</a>, <a
+        href="https://vi.wikipedia.org/wiki/L%C3%A0o" title="biển Đông">biển Đông</a> và
     <a href="https://vi.wikipedia.org/wiki/V%E1%BB%8Bnh_Th%C3%A1i_Lan" title="vịnh Thái Lan">vịnh Thái Lan</a>. <br>
 </span> <br>
-<span  class="indent" style="font-size: 20px;" >
-        Lãnh thổ Việt Nam xuất hiện con người sinh sống từ thời đại đồ đá cũ. Lịch sử Việt Nam cổ đại bắt đầu với các
-    nhà nước Văn Lang, Âu Lạc. Âu Lạc bị nhà Triệu từ phương Bắc thôn tính vào đầu thế kỷ thứ 2 TCN sau đó là thời kỳ
-    Bắc thuộc kéo dài hơn một thiên niên kỷ. Chế độ quân chủ độc lập được tái lập sau chiến thắng của Ngô Quyền trước
-    nhà Nam Hán. Sự kiện này mở đường cho các triều đại độc lập kế tiếp và trong suốt thời kỳ độc lập tự chủ, quốc gia này
+<span class="indent" style="font-size: 20px;">
+        Lãnh thổ Việt Nam xuất hiện con người sinh sống từ <a
+        href="https://vi.wikipedia.org/wiki/Th%E1%BB%9Di_%C4%91%E1%BA%A1i_%C4%91%E1%BB%93_%C4%91%C3%A1_c%C5%A9"
+        title="thời đại đồ đá cũ">thời đại đồ đá cũ</a>.
+    Lịch sử Việt Nam cổ đại bắt đầu với các
+    nhà nước <a href="https://vi.wikipedia.org/wiki/V%C4%83n_Lang" title="Văn Lang">Văn Lang</a>
+    , <a href="https://vi.wikipedia.org/wiki/%C3%82u_L%E1%BA%A1c" title="Âu Lạc">Âu Lạc</a>.
+    Âu Lạc bị <a href="https://vi.wikipedia.org/wiki/Nh%C3%A0_Tri%E1%BB%87u" title="nhà Triệu">nhà Triệu</a>
+    từ phương Bắc thôn tính vào đầu thế kỷ thứ 2 TCN sau đó là thời kỳ
+    <a href="https://vi.wikipedia.org/wiki/B%E1%BA%AFc_thu%E1%BB%99c" title="Bắc thuộc">Bắc thuộc</a> kéo dài hơn một thiên niên kỷ.
+    Chế độ quân chủ độc lập được tái lập sau chiến thắng của <a
+        href="https://vi.wikipedia.org/wiki/Ng%C3%B4_Quy%E1%BB%81n" title="Ngô Quyền">Ngô Quyền</a> trước
+    nhà <a href="https://vi.wikipedia.org/wiki/Nam_H%C3%A1n" title="Nam Hán">Nam Hán</a>. Sự kiện này mở đường cho các triều đại độc lập kế tiếp và trong suốt thời kỳ độc lập tự chủ, quốc gia này
     nhiều lần chiến thắng trước các cuộc chiến tranh xâm lược từ phương Bắc và dần mở rộng về phía nam. Thời kỳ Bắc thuộc
-    cuối cùng kết thúc sau chiến thắng trước nhà Minh của nghĩa quân Lam Sơn.<br>
+    cuối cùng kết thúc sau chiến thắng trước nhà <a href="https://vi.wikipedia.org/wiki/Nh%C3%A0_Minh"
+                                                    title="Minh">Minh</a> của nghĩa quân <a
+        href="https://vi.wikipedia.org/wiki/Kh%E1%BB%9Fi_ngh%C4%A9a_Lam_S%C6%A1n" title="Lam Sơn">Lam Sơn</a>.<br>
 </span><br>
-<span class="indent" style="font-size: 20px" >
-        Việt Nam đã thiết lập quan hệ ngoại giao với 189 quốc gia[60] và là thành viên của nhiều tổ chức quốc tế,
-    trong đó nổi bật như: Liên Hợp Quốc, Hiệp hội các quốc gia Đông Nam Á (ASEAN), Diễn đàn Hợp tác Kinh tế
-    Châu Á – Thái Bình Dương (APEC) và Tổ chức Thương mại Thế giới (WTO).Theo các văn kiện Đại hội đại biểu
-    toàn quốc lần thứ X: Cộng hòa Xã hội chủ nghĩa Việt Nam chủ trương đường lối đối ngoại độc lập, tự chủ, rộng mở,
-    đa dạng, đa phương hóa quan hệ quốc tế, chủ động hội nhập quốc tế với phương châm "Việt Nam sẵn sàng là bạn và là
-    đối tác tin cậy của tất cả các nước phấn đấu vì hòa bình, độc lập và phát triển".
+<span class="indent" style="font-size: 20px">
+        Việt Nam đã thiết lập <a
+        href="https://vi.wikipedia.org/wiki/Quan_h%E1%BB%87_ngo%E1%BA%A1i_giao_c%E1%BB%A7a_Vi%E1%BB%87t_Nam"
+        title=" quan hệ ngoại giao">quan hệ ngoại giao</a>
+    với 189 quốc gia[60] và là thành viên của nhiều <a
+        href="https://vi.wikipedia.org/wiki/T%E1%BB%95_ch%E1%BB%A9c_qu%E1%BB%91c_t%E1%BA%BF" title="tổ chức quốc tế">tổ chức quốc tế</a>,
+    trong đó nổi bật như: <a href="https://vi.wikipedia.org/wiki/Li%C3%AAn_H%E1%BB%A3p_Qu%E1%BB%91c"
+                             title="Liên Hợp Quốc">Liên Hợp Quốc</a>,
+    <a href="https://vi.wikipedia.org/wiki/Hi%E1%BB%87p_h%E1%BB%99i_c%C3%A1c_qu%E1%BB%91c_gia_%C4%90%C3%B4ng_Nam_%C3%81"
+       title="Hiệp hội các quốc gia Đông Nam Á">Hiệp hội các quốc gia Đông Nam Á</a> (ASEAN),
+    <a href="https://vi.wikipedia.org/wiki/Di%E1%BB%85n_%C4%91%C3%A0n_H%E1%BB%A3p_t%C3%A1c_Kinh_t%E1%BA%BF_ch%C3%A2u_%C3%81_-_Th%C3%A1i_B%C3%ACnh_D%C6%B0%C6%A1ng"
+       title="Diễn đàn Hợp tác Kinh tếChâu Á – Thái Bình Dương">Diễn đàn Hợp tác Kinh tếChâu Á – Thái Bình Dương</a> (APEC)
+    và <a
+        href="https://vi.wikipedia.org/wiki/T%E1%BB%95_ch%E1%BB%A9c_Th%C6%B0%C6%A1ng_m%E1%BA%A1i_Th%E1%BA%BF_gi%E1%BB%9Bi"
+        title="Tổ chức Thương mại Thế giới">Tổ chức Thương mại Thế giới</a> (WTO).
+    Theo các văn kiện <a
+        href="https://vi.wikipedia.org/wiki/%C4%90%E1%BA%A1i_h%E1%BB%99i_%C4%90%E1%BA%A3ng_C%E1%BB%99ng_s%E1%BA%A3n_Vi%E1%BB%87t_Nam_X"
+        title="Đại hội đại biểu toàn quốc lần thứ X">Đại hội đại biểu toàn quốc lần thứ X</a>:
+    Cộng hòa Xã hội chủ nghĩa Việt Nam chủ trương đường lối <a
+        href="https://vi.wikipedia.org/wiki/%C4%90%E1%BB%91i_ngo%E1%BA%A1i" title="đối ngoại">đối ngoại</a> độc lập, tự chủ, rộng mở,
+    đa dạng, đa phương hóa <a href="https://vi.wikipedia.org/wiki/Quan_h%E1%BB%87_qu%E1%BB%91c_t%E1%BA%BF"
+                              title="quan hệ quốc tế">quan hệ quốc tế</a>, chủ động hội nhập quốc tế với phương châm "Việt Nam sẵn sàng là bạn và là
+    đối tác tin cậy của tất cả các nước phấn đấu vì <a href="https://vi.wikipedia.org/wiki/H%C3%B2a_b%C3%ACnh"
+                                                       title="hòa bình">hòa bình</a>, <a
+        href="https://vi.wikipedia.org/wiki/%C4%90%E1%BB%99c_l%E1%BA%ADp" title="độc lập">độc lập</a> và <a
+        href="https://vi.wikipedia.org/wiki/Ph%C3%A1t_tri%E1%BB%83n" title="phát triển">phát triển</a>phát triển".
 </span>
 </body>
 
