--- a/ss8_bootstrap/untitled/src/bai_tap/create_gallery.html
+++ b/ss8_bootstrap/untitled/src/bai_tap/create_gallery.html
@@ -4,25 +4,27 @@
     <meta charset="UTF-8">
     <title>Responsive Image Gallery</title>
     <link rel="stylesheet" href="../../bootstrap-5.0.2-dist/css/bootstrap.css">
+    
     <style>
         .hv :hover {
             border: 1px solid black
         }
     </style>
+    <link rel="stylesheet" href="bai_1/external.css">
 
 
 </head>
 <body>
 <br>
-<h1 style="font-family: 'Times New Roman',serif; font-size: larger ; padding: 1px"><b>Responsive Image Gallery</b></h1>
-<span style="font-family: 'Times New Roman',serif ; padding: 1px"> Resize the browser window to see the effect. </span>
+<h1 class="text" style=" font-size: larger ; padding: 1px"><b>Responsive Image Gallery</b></h1>
+<span class="text" style=" padding: 1px"> Resize the browser window to see the effect. </span>
 <div class="row d-flex justify-content-center">
     <div class="col-12 col-sm-6 col-md-3">
         <div class="card d-flex m-lg-2 justify-content-center border-0 solid bg-transparent hv">
             <a href="bai_1/img_fjords.jpg " target="_blank">
                 <img src="bai_1/img_fjords.jpg" alt="1" width="100%" height="100%">
             </a>
-            <div class="d-flex justify-content-center" style="font-family: 'Times New Roman',serif;font-size: small">
+            <div class="d-flex justify-content-center text2 " >
                 Add a description of the image here
             </div>
         </div>
@@ -33,7 +35,7 @@
                 <img src="bai_1/img_forest.jpg" alt="2" width="100%" height="100%">
             </a>
 
-            <div class="d-flex justify-content-center" style="font-family: 'Times New Roman',serif;font-size: small">
+            <div class="d-flex justify-content-center text2">
                 Add a description of the image here
             </div>
         </div>
@@ -43,7 +45,7 @@
             <a href="bai_1/img_lights.jpg" target="_blank">
                 <img src="bai_1/img_lights.jpg" alt="3" width="100%" height="100%">
             </a>
-            <div class="d-flex justify-content-center" style="font-family: 'Times New Roman',serif;font-size: small">
+            <div class="d-flex justify-content-center text2" >
                 Add a description of the image here
             </div>
         </div>
@@ -53,14 +55,14 @@
             <a href="bai_1/img_fjords.jpg" target="_blank">
                 <img src="bai_1/img_mountains.jpg" alt="4" width="100%" height="100%">
             </a>
-            <div class="d-flex justify-content-center" style="font-family: 'Times New Roman',serif;font-size: small">
+            <div class="d-flex justify-content-center text2 ">
                 Add a description of the image here
             </div>
         </div>
     </div>
 </div>
 <div class="row">
-    <div style="font-family: 'Times New Roman',serif;font-size: x-small"> This example use media queries to
+    <div class="text2"> This example use media queries to
         re-arrange the images on different screen sizes: for screens larger than 700px wide, it will show
         four images side by side,
         for screens smaller than 700px, it will show two images side by side. For screens smaller than
