--- a/CaseStudy/3.2. Web/furama_resort_manager/src/furama_web_layout.html
+++ b/CaseStudy/3.2. Web/furama_resort_manager/src/furama_web_layout.html
@@ -8,13 +8,16 @@
 </head>
 <body>
 <div class="row vh-100 ">
-  <div class="row bg-danger d-flex align-content-between" style="height: 15%">
-    <div>
-      <a class="navbar-brand" href="#" style="font-family: Broadway,serif">Furama</a>
+  <div class="row bg-danger " style="height: 15%">
+    <div class="col-md-2">
+      <a class="navbar-brand d-flex justify-content-between" href="#" style="font-family: Broadway,serif">Furama</a>
     </div>
-   <di>
-     <a class="nav-link active" href="#">Van Tien Sy</a>
-   </di>
+    <div class="col-md-8">
+
+    </div>
+   <div class="col-md-2 d-flex justify-content-center " style="margin-top: 35px; " >
+     <a class="nav-link active d-flex justify-content-between" href="#">Van Tien Sy</a>
+   </div>
 
   </div>
   <div class="header-link h-10 "style="height: 10%">
@@ -47,14 +50,12 @@
   </div>
   <div class="row body vh-100 bg-light" style="height: 60%">
     <div class="col-md-4 bg-light" >
-
     </div>
     <div class="col-md-8 bg-info" >
-
     </div>
   </div>
-  <div class="footer h-15 d-flex align-content-center" style="height: 10%">
-<a class="col">Footer</a>
+  <div class="footer " style="height: 10%">
+<a class="col d-flex justify-content-center">Footer</a>
   </div>
 </div>
 
